farting around with a heart shape

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 	function onDeviceReady()
 	{
 		// do your thing!
-		navigator.notification.alert("PhoneGap is working")
+		//navigator.notification.alert("PhoneGap is working")
 	}
     
     </script>
@@ -53,11 +53,12 @@
 		<!-- p><a href="facetime://16466206566"><img src="img/daddy.png"/></a></p -->
 		
 		
-		
+		<div id="heart"></div>
+		<!--
 		<div id="barn">
-<!--			<div id="roof"></div>
+			<div id="roof"></div>
 			<div id="floors">
--->			<div id="topFloor" class="clearfix">
+			<div id="topFloor" class="clearfix">
 				<ul>
 					<li>pig</li>
 					<li>cow</li>
@@ -71,9 +72,9 @@
 					<li>goat</li>
 				</ul>
 			</div>
-<!--			</div>
--->		</div>
-		
+			</div>
+		</div>
+-->			
 		
 		
 		
