--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="css/ipad.css" type="text/css" />
 	<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="css/iphone.css" type="text/css" />
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script src="js/raphael-min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/phonegap.0.9.5.1.min.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -33,8 +34,12 @@
 	*/
 	
 	function onBodyLoad()
-	{		
+	{	
 		document.addEventListener("deviceready",onDeviceReady,false);
+		window.addEventListener('webkitAnimationEnd', function() {
+			alert("done!");
+		});
+	  
 	}
 	
 	/* When this function is called, PhoneGap has been initialized and is ready to roll */
